# stormgroupchallenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TEST_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260610_0001_create_breaches.py
app/: main.py
app/api/: dependencies.py  errors.py
app/api/routes/: breaches.py  health.py  sync.py
app/application/: exceptions.py  validators.py
app/application/services/: breach_query_service.py  breach_sync_service.py
app/core/: config.py  logging.py  pagination.py
app/domain/: filters.py
app/infrastructure/hibp/: client.py  mapper.py
app/infrastructure/persistence/: models.py  repositories.py  session.py
app/schemas/: breach.py
docker/postgres/: init-test-db.sh  init-test-db.sql
legacy/: BUGS_FOUND.md  breach_matcher.py
tests/: conftest.py  factories.py
tests/e2e/: test_api_http.py
tests/integration/: test_breaches.py  test_health_docs.py  test_sync.py
tests/legacy/: test_breach_matcher.py
tests/unit/: test_config.py  test_hibp_client.py  test_hibp_mapper.py  test_repositories.py  test_session.py
