[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "breach-radar"
version = "0.1.0"
description = "Breach Radar API for Neuroscan backend challenge"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.23",
  "ruff>=0.5",
  "httpx2>=2.3,<3",
]

[tool.setuptools.packages.find]
include = ["app*", "legacy*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "e2e: tests that call a running API over HTTP",
]

[tool.coverage.run]
branch = true
source = ["app", "legacy"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
